--- a/main/themes/skyshayde/layouts/index.html
+++ b/main/themes/skyshayde/layouts/index.html
@@ -1,3 +1,9 @@
 <head>
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
+<body>
+    <div class="navigation">
+        <a href="http://github.com/skyshayde" class="fa"><i class="fab fa-github fa-w-16 fa-4x"></i></a>
+    </div>
+</body>
